# chuchu

./: .pre-commit-config.yaml  CHANGELOG.md  phone_keypad.py  pyproject.toml  tox.ini
.github/workflows/: publish.yaml
chuchu/: __init__.py  button.py  checkbox.py  dropdown.py  frame.py  images.py  label.py  ltypes.py  menu.py  progressbar.py  slider.py  statusbar.py  text_widget.py  textbox.py  theming.py  widget.py  window.py
examples/: basic_menubar.py  phone_keypad.py
