[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chuchu"
version = "0.2.10"
description = "A easy-to-use declarative GUI library built on top of tkinter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typing-extensions>=4.0; python_version < '3.12'",
]
authors = [
    { name = "Lily Ellington", email = "lilell_@outlook.com " }
]
keywords = [
    "tkinter",
    "gui",
    "ui",
    "tk",
    "ttk",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["I001"]

[tool.ruff.lint.isort]
known-local-folder = ["chuchu"]
force-single-line = false
force-sort-within-sections = true
order-by-type = false

[tool.mypy]
python_version = "3.10"
strict = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "tox>=4.32.0",
]

[project.urls]
repository = "https://github.com/lilellia/chuchu"
"Bug Tracker" = "https://github.com/lilellia/chuchu/issues"

[tool.hatch.build]
include = [
    "chuchu",
]
